<resources>
    <string name="app_name">LetsHike</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="passwordField">Password</string>
    <string name="errorSignInMessage">Both fields have to be filled up</string>
    <string name="errorSignInTitle">Error in SignUp!</string>
    <string name="title_section1">tab1</string>
    <string name="title_section2">tab2</string>
    <string name="title_activity_home">Home</string>
    <string name="title_activity_selected_trail">SelectedTrail</string>

    <string-array name="nav_drawer_items">
        <item>Home</item>
        <item>Friends</item>
        <item>History</item>
        <item>Settings</item>
    </string-array>
    <array name="nav_drawer_icons">
        <item>@drawable/ic_home</item>
        <item>@drawable/ic_communities</item>
        <item>@drawable/ic_people</item>>
        <item>@drawable/ic_pages</item>
    </array>
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="title_activity_camera">CameraActivity</string>
    <string name="title_activity_geotag">GeotagActivity</string>
    <string name="distance">Distance</string>
    <string name="steps">Steps</string>
    <string name="startTime">Start Time</string>
    <string name="endTime">End Time</string>
    <string name="calories">Calories</string>
    <string name="activity_hike_stats">activity Hike Stats</string>
</resources>
